style: landing page fully animated

--- a/src/assets/globals.scss
+++ b/src/assets/globals.scss
@@ -10,7 +10,7 @@
     --light: #ffffff;
     --landing-bg-image: radial-gradient(circle, #111111 0%, #000000 65%);
 
-    --gray-4: #222222;
+    --gray-4: #1c1c1c;
     --gray-3: #666666;
     --gray-2: #888888;
     --gray-1: #b0b0b0;
