--- a/src/assets/globals.scss
+++ b/src/assets/globals.scss
@@ -26,6 +26,58 @@ body {
   background-color: var(--dark);
 }
 
+@keyframes rainbow-text {
+  0% {
+    background-image: linear-gradient(
+      90deg,
+      hsl(0, 100%, 50%),
+      hsl(60, 100%, 50%)
+    );
+  }
+  16.67% {
+    background-image: linear-gradient(
+      90deg,
+      hsl(60, 100%, 50%),
+      hsl(120, 100%, 50%)
+    );
+  }
+  33.33% {
+    background-image: linear-gradient(
+      90deg,
+      hsl(120, 100%, 50%),
+      hsl(180, 100%, 50%)
+    );
+  }
+  50% {
+    background-image: linear-gradient(
+      90deg,
+      hsl(180, 100%, 50%),
+      hsl(240, 100%, 50%)
+    );
+  }
+  66.67% {
+    background-image: linear-gradient(
+      90deg,
+      hsl(240, 100%, 50%),
+      hsl(300, 100%, 50%)
+    );
+  }
+  83.33% {
+    background-image: linear-gradient(
+      90deg,
+      hsl(300, 100%, 50%),
+      hsl(360, 100%, 50%)
+    );
+  }
+  100% {
+    background-image: linear-gradient(
+      90deg,
+      hsl(360, 100%, 50%),
+      hsl(420, 100%, 50%)
+    );
+  }
+}
+
 // Khula Font
 .khula-light {
   font-family: "Khula", sans-serif;
