--- a/src/assets/globals.scss
+++ b/src/assets/globals.scss
@@ -28,6 +28,47 @@ body {
   background-color: var(--dark);
 }
 
+.contact-bg {
+  position: relative;
+  overflow: hidden;
+  background-color: var(--light);
+  &::before {
+    content: "";
+    position: absolute;
+    left: -50%;
+    bottom: -50%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--light);
+    background: radial-gradient(
+      circle,
+      rgba(185, 185, 185, 1) 0%,
+      rgba(255, 255, 255, 1) 40%
+    );
+    filter: blur(10px);
+    backdrop-filter: blur(10px);
+    z-index: -1;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -50%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--light);
+    background: radial-gradient(
+      circle,
+      rgba(185, 185, 185, 1) 0%,
+      rgba(255, 255, 255, 1) 40%
+    );
+    filter: blur(10px);
+    backdrop-filter: blur(10px);
+    z-index: -1;
+  }
+}
+
 // Khula Font
 .khula-light {
   font-family: "Khula", sans-serif;
